[Target] Fix target level item alignment

--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -46,6 +46,9 @@ input[type="radio"]:checked + span
   margin: 0 -100px
   background-color: $white
 
+  .level .level-item
+    margin-bottom: 1.5rem
+
 .target-slider
   .arrow
     cursor: pointer
